<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pink1"
    tools:context=".UpdateAndDeletepup">

    <ImageView
        android:id="@+id/petimage"
        android:layout_width="285dp"
        android:layout_height="285dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_baseline_add_a_photo_24"
        android:backgroundTint="#D5851472"
        android:contentDescription="@string/image_for_pup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/breedname"
        android:layout_width="264dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_search"
        android:drawableStart="@drawable/ic_baseline_pets_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/iceland"
        android:hint="@string/breed_name"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/email"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:textColorHint="#260233"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petimage"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="264dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_search"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="3dp"
        android:ems="10"
        android:fontFamily="@font/iceland"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/phone"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:textColorHint="#330202"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breedname"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="263dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_search"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/iceland"
        android:hint="@string/phone"
        android:inputType="phone"
        android:nextFocusDown="@id/price"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:textColorHint="#330202"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/price"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_search"
        android:drawableStart="@drawable/ic_money"
        android:drawablePadding="5dp"
        android:fontFamily="@font/iceland"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingEnd="8dp"
        android:textAlignment="viewStart"
        android:textColorHint="#330202"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintVertical_bias="0.189"
        android:autofillHints="" />

    <Button
        android:id="@+id/update"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="44dp"
        android:alpha="0.7"
        android:background="@drawable/add_button"
        android:fontFamily="@font/iceland"
        android:text="@string/update_pup"
        android:textColor="#6F235C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_back"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>