<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#ffe8ff"
    app:cardElevation="3dp">

    <RelativeLayout
        android:id="@+id/search_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/search_pic_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/search_pic"
                android:layout_width="100dp"
                android:layout_height="100dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/search_uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/search_pic_card"
            android:text="@string/prompt_username"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/search_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_uname"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/search_pic_card"
            android:textSize="16sp" />

        <Button
            android:id="@+id/search_btn_view"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/search_view"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/search_btn_chat"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/search_btn_view"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_button_yellow"
            android:text="@string/prof_chat"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>